feat(api): add notification status get for batches
